--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,11 @@
-* {
-  padding: 0;
-  margin: 0;
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+@layer base {
+
+  body{
+    height: 100vh;
+    background-color: #00747C;
+  }
 }
